Modals fixed, spacing fixed... fixed
Kleine Fixes und Verbesserungen

--- a/web/css/dashboard.css
+++ b/web/css/dashboard.css
@@ -1,6 +1,14 @@
+table {
+  overflow: visible !important;
+}
+
 @media (max-width: 1300px) {
+  .tmp-modal table {
+    overflow-x: scroll !important;
+  }
   #configModal table {
     display: block !important;
+    overflow-x: scroll !important;
   }
 }
 
@@ -8,7 +16,4 @@
   #schuelerModal table {
     display: block !important;
   }
-}
-#schuelerModal table {
-  max-height: 60vh;
 }
