--- a/web/css/main.css
+++ b/web/css/main.css
@@ -90,5 +90,5 @@ table {
 }
 
 input {
-	min-width: 100px;
+	min-width: 80px;
 }
