--- a/web/css/wahl.css
+++ b/web/css/wahl.css
@@ -77,17 +77,21 @@
 }
 
 @media (max-width: 750px) {
-	.card.projekt .card-body {
+	.card .card-body {
 		padding: 0.3rem !important;
 	}
-	.card.projekt .card-body h5 {
+	.card .card-body h5 {
 		font-size: 0.7rem !important;
 	}
-	.card.projekt .card-body a{
+	.card .card-body a{
 		padding: 0.188rem 0.45rem !important;
 	}
 	.card.projekt .card-body a {
 		font-size: 0.7rem !important;
+	}
+	#wahlliste th, #wahlliste td {
+		font-size: 0.7rem !important;
+		padding: 0.188rem 0.45rem !important;
 	}
 	#wahlliste .btn-group .btn {
 		padding: 0.188rem 0.45rem !important;
